# EscrowForge

./: .gitignore  LICENSE  README.md  wrangler.toml
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/escrowforge/: Cargo.toml
contracts/escrowforge/src/: contract.rs  test.rs
contracts/escrowforge/test_snapshots/test/: test_abort_refunds_only_secured.1.json  test_abort_with_nothing_secured_fails.1.json  test_cancel_refunds_only_locked.1.json  test_cancel_with_nothing_locked_fails.1.json  test_create_escrow_locks_total.1.json  test_disburse_after_abort_fails.1.json  test_disburse_pays_correct_amount.1.json  test_disburse_requires_creator_auth.1.json  test_double_disburse_fails.1.json  test_double_release_fails.1.json  test_forge_deal_locks_total.1.json  test_forge_fails_creator_is_provider.1.json  test_release_after_cancel_fails.1.json  test_release_pays_correct_amount.1.json  test_release_requires_client_auth.1.json
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/escrow/: page.tsx
frontend/src/components/: ActivityFeed.tsx  Header.tsx  LuminousProgressTracker.tsx  TxBanner.tsx
frontend/src/components/errors/: WalletNotFound.tsx
frontend/src/lib/: config.test.ts  config.ts  errors.test.ts  errors.ts  soroban.ts  wallet.tsx
