[package]
name = "escrowforge"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "escrowforge"
path = "src/contract.rs"
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
